# SIFT

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: RESULTS.md  ab_active_request.py  codemode_bench.py  codemode_results.json  mcpzero_needle.py  run_benchmark.py
core/: go.mod
core/cmd/sift/: main.go
core/data/: bench_tasks.json  registry.json
core/internal/agent/: agent.go
core/internal/bench/: bench.go
core/internal/embed/: embed.go
core/internal/gateway/: gateway.go  gateway_test.go  mock.go
core/internal/openrouter/: openrouter.go
core/internal/registry/: registry.go  (+1 more)
docs/: README.md  api-reference.md  architecture.md  building-tools.md  code-mode.md  cookbook-google-workspace.md  deployment.md  discovery.md  executing-and-filtering.md  getting-started.md  importing.md  providers.md  quality.md  scoping.md  security.md
embed-svc/: requirements.txt  server.py
examples/: quickstart.py  serve_http.py  serve_mcp.py  smoke_codemode.py  smoke_live.py  smoke_prompted.py
src/sift/: __init__.py  _sandbox_child.py  agentbench.py  bench.py  codemode.py  constrain.py  embeddings.py  evalsuite.py  gateway.py  http_server.py  metatools.py  otel.py  quality.py  registry.py  rerank.py  retrieval.py  sandbox.py  scope.py  session.py  toon.py
tests/: conftest.py  test_active_request.py  test_adapters.py  test_async.py  test_codemode.py  test_core.py  test_eval.py  test_http_server.py  test_importers.py  test_index_cache.py  test_integrator_feedback.py  test_limits_observer.py  test_mcp_proxy.py  test_pin_browse.py  test_projection.py  test_prompted.py  test_quality_and_more.py  test_retrieval.py  test_sandbox.py  test_scope.py  test_session.py  test_types.py
(+14 files in other folders)
