[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift-tools"
version = "0.1.0"
description = "Hierarchical, search-first tool discovery for LLM agents. Give the model 3 meta-tools instead of a 30k-token catalog."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Victor Alves" }]
keywords = ["llm", "agents", "tools", "function-calling", "mcp", "langchain", "tool-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

# Núcleo enxuto: só precisa de embeddings + numpy. Tudo o mais é opcional.
dependencies = [
    "numpy>=1.24",
    "fastembed>=0.4.2",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.40"]
langchain = ["langchain-core>=0.3"]
mcp = ["mcp>=1.0"]
openapi = ["httpx>=0.27"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "ruff>=0.6", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
all = ["openai>=1.40", "anthropic>=0.40", "langchain-core>=0.3", "mcp>=1.0",
       "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29"]

[project.urls]
Homepage = "https://github.com/Victor-Alves0/SIFT"
Repository = "https://github.com/Victor-Alves0/SIFT"
Issues = "https://github.com/Victor-Alves0/SIFT/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
